<?xml version="1.0"?>
<package format="2">

  <name>mpu6050-imu</name>
  <version>0.0.0</version>
  <description>The mpu6050-imu package</description>
  <author>Hersh Vakharia</author>
  <license>BSD 3-Clause License</license>
  <maintainer email="hershv@umich.edu">Hersh Vakharia</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
